# Redbench

./: .gitignore  README.md  pyproject.toml
src/redbench/: download_artifacts.py  run.py
src/redbench/baseline/: round_robin.py
src/redbench/generation/: README.md  run.py
src/redbench/generation/config/: default.json  fast.json
src/redbench/generation/dataset_input/: DataType.py  create_db.py  create_normalized_datasets.py  example_input.json  input_files.py  load_schema.py  prepare_and_scale.py  read_csv.py  retrieve_statistics.py  split_csv_tables.py
src/redbench/generation/helper/: create_join.py  redset_table_sizes.py  table_mapper.py  tool.py  workload_statistics_retriever.py
src/redbench/generation/query_builder/: column_type_retriever.py  gen_wl_weighted_sampling.py  insert_query_builder.py  join_clause_builder.py  predicate_builder.py  query_builder.py  workload_statistics_retriever_test.py
src/redbench/matching/: README.md  run.py  utils.py
src/redbench/matching/benchmarks/: benchmark.py  imdb.py  tpcds.py
src/redbench/matching/config/: default.json  fast.json  imdb.json  tpcds.json
src/redbench/matching/gen_queries/: join_matching_method.py  matching_utils.py  query_generator.py  scanset_mapper.py  scanset_matching_method.py
src/redbench/plots/: create_plots.py  plot_arrival_time_overview.py  plot_cluster_overview_plot.py  plot_query_type_frequencies.py  plot_random_query_runs.py  plot_read_write_timeline.py  plot_repetition.py  plot_scanned_rows.py  plot_utils.py
src/redbench/utils/: load_and_preprocess_redset.py  log.py
(+1 files in other folders)
