[project]
name = "redbench"
version = "1.0.0"
description = "Redbench: Workload Synthesis From Cloud Traces - a TU Darmstadt & UTN benchmark"
dependencies = [
    "tqdm>=4.67.1",
    "pandas>=2.3.0",
    "numpy>=2.3.1",
    "duckdb>=1.3.1",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "orjson>=3.10.18",
    "osfclient>=0.0.5",
    "hillmapper>=0.1.1",
    "ipykernel>=6.30.1",
    "pyarrow>=21.0.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/redbench"]

[dependency-groups]
test = ["pytest", "pytest-cov"]